# crawler_projects

cli_project/: README.md  crawler.py  main.py  pyproject.toml
schema_project/: Makefile  main.py  pyproject.toml
schema_project/parsers/: jsonld.py  microdata.py  opengraph.py  rdfa.py
schema_project/spiders/: const.py  consume.py  identify.py
