[tool.poetry]
name = "schema_project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.5"
parselcli = "^0.33.1"
parsel = "^1.6.0"
click = "^8.0.1"
requests = "^2.26.0"
extruct = "^0.13.0"
requests-cache = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
